--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">New Project</string>
+    
+    <string-array name="userTypes">
+        <item>Parent</item>
+        <item>Teacher</item>
+        <item>Alumni</item>
+        <item>Student</item>
+    </string-array>
 </resources>
