--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
         <item>Alumni</item>
         <item>Student</item>
     </string-array>
+
+    <string-array name="vehicleTypes">
+        <item>Car</item>
+        <item>Electric Car</item>
+        <item>Bicycle</item>
+        <item>Helicopter</item>
+        <item>Segway</item>
+    </string-array>
 </resources>
